samples/_failures_safe/1761398546_c25ee1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3c580f8.c: In function ‘main’:
./samples/SAFE/__tmp_f3c580f8.c:167:5: error: ‘tokenize’ undeclared (first use in this function); did you mean ‘tokens’?
  167 |     tokenize
      |     ^~~~~~~~
      |     tokens
./samples/SAFE/__tmp_f3c580f8.c:167:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f3c580f8.c:167:13: error: expected ‘;’ at end of input
  167 |     tokenize
      |             ^
      |             ;
./samples/SAFE/__tmp_f3c580f8.c:167:5: error: expected declaration or statement at end of input
  167 |     tokenize
      |     ^~~~~~~~
